<resources>
    <string name="app_name">Tarea2Menus</string>
    <string name="fernando">fernando cervantes</string>
    <string name="man">Hombre</string>
    <string name="woman">Mujer</string>
    <string name="Other">Otro</string>
    <string name="training">Dias de entrenamiento</string>
    <string name="bien">Bienvenido</string>
    <string name="usuarioo">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="usuarioText">Ingresar_usuario</string>
    <string name="contraseniaText">********</string>
    <string name="login">Entrar</string>
    <string name="register">Registrar</string>
    <string name="genre">Genero</string>
    <string name="monday">lunes</string>
    <string name="thursday">martes</string>
    <string name="wend">miercoles</string>
    <string name="tusd">jueves</string>
    <string name="friday">viernes</string>
    <string name="saturday">sabado</string>
    <string name="allbefore">Todos los anteriores</string>
    <string name="goal">Cual es tu meta principal?</string>
    <string name="comment1">Comentario personal</string>
    <string name="send">Enviar</string>
    <string name="settingss">settingss</string>
    <string name="menuguardar">menuguardar</string>
    <string name="menunuevo">menunuevo</string>
    <string name="info">El objetivo de esta aplicacion es apoyar al usuario para que tenga una mejor condicion fisica mediante
    el asesoramiento respecto a maquinas de entrenamiento  , alimentos y estilos de vida para alcanzar su objetivo mas rapido</string>
    <string name="menu_informacion" />
    <string name="settings">settings\n</string>
    <string name="profile">Perfil</string>
    <string name="settingsss">Configurar</string>
    <string name="modifyPlan">Modificar Plan</string>
    <string name="closeSession">Salir</string>
    <string name="open_drawer">open_drawer\n</string>
    <string name="close_drawer">close_drawer\n</string>
    <string name="searchTrainer">Buscar entrenador\n</string>
    <string name="calendar">Calendario\n</string>
    <string name="goals">"Ejercicios en casa "</string>
    <string name="foods">Comida\n</string>
    <string name="news"> Ejercicios en Gimnasio</string>
    <string name="selected_date_label">Fecha seleccionada:</string>
    <string name="event_name">Nombre del evento:</string>
    <string name="save_event">Guardar evento:</string>
    <string name="lose_weight">Dieta para Bajar de Peso</string>
    <string name="week">Semana 1 de 4</string>
    <string name="nutricional_plan">Plan Nutricional</string>
    <string name="objective">Objetivo</string>
    <string name="gain_weight">Dieta para Subir de Peso</string>
    <string name="imc">Introduce tu Peso y Talla</string>
    <string name="weight">Introduce tu peso (kg)</string>
    <string name="measures">Introduce tu talla (cm) </string>
    <string name="exercise1">Estiramientos</string>
    <string name="description1">Estiramientos para antes y después de entrenar </string>
    <string name="exercise2">Cuadripces</string>
    <string name="exercise3">Glúteo y Femoral</string>
    <string name="exercise4">Espalda y Hombro</string>
    <string name="exercise5">Abdomen Tríceps y Bíceps</string>
    <string name="description2">Ejercicios para cuadriceps sin material </string>
    <string name="description3">Ejercicios para glúteo y femoral sin material </string>
    <string name="description4">Ejercicios para espalda y hombro sin material </string>
    <string name="description5">Ejercicios para abdomen tríceps y bíceps sin material </string>
    <string name="exercise_gym1">Pecho y Abdomen</string>
    <string name="description_gym1">Ejercicios con mancuernas y máquinas para pecho y abdomen </string>
    <string name="exercise_gym2">Cuadripces</string>
    <string name="exercise_gym3">Glúteo y Femoral</string>
    <string name="exercise_gym4">Espalda y Hombro</string>
    <string name="exercise_gym5">Tríceps y Bíceps</string>
    <string name="description_gym2">Ejercicios con mancuernas y máquinas para cuadriceps </string>
    <string name="description_gym3">Ejercicios con mancuernas y máquinas para glúteo y femoral  </string>
    <string name="description_gym4">Ejercicios con mancuernas y máquinas para espalda y hombro  </string>
    <string name="description_gym5">Ejercicios con mancuernas y máquinas para tríceps y bíceps  </string>
    <string name="name_user">Nombre de Usuario</string>
    <string name="email_user">usuario@gmail.com</string>
    <string name="tel_user">+1 234 567 890</string>
    <string name="change_data">Cambiar Datos</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="exit">Cerrar Sesión</string>
    <string name="trainer_description">Encuentra a los mejores instructores para entrenar en casa o gimnasio</string>
    <string name="high_calories">Incluye alimentos ricos en calorías saludables como frutos secos, aguacates, avena, y proteínas magras.</string>
    <string name="low_calories">Incorpora alimentos bajos en calorías y ricos en fibra como vegetales, frutas frescas, y proteínas magras.</string>
    <string name="registrar">Registrar</string>
    <string name="incorreo">Ingresar correo\n</string>
    <string name="correo_electronico">Correo electronico\n</string>
    <string name="registro">Registro</string>
    <string name="coach1">LEAN BEEF PATTY</string>
    <string name="coach2">Chris Bumstead (CBUM)</string>
    <string name="coach3">Carlos Belcast</string>
    <string name="coach4">Carol Vaz</string>
    <string name="des_coach1">Instructora de fitness. Es popular por sus rutinas de entrenamiento en línea. Sus ejercicios incluyen levantamiento de pesas, flexiones y calistenia.</string>
    <string name="des_coach2"> Es un destacado fisicoculturista profesional canadiense de la IFBB, ganador del torneo Mr. Olympia cinco años seguidos.</string>
    <string name="des_coach3">Celebridad y atleta profesional del fitness. Ha obtenido una gran popularidad por sus consejos sobre regímenes de ejercicios, tutoriales de ejercicios y guías de dietas saludables. </string>
    <string name="des_coach4">Instructora fitness de Brasil que ha conquistado a millones de seguidores con sus rutinas intensas y estrictas.</string>
    <string name="navigation_drawer_open">d</string>
    <string name="navigation_drawer_close">s</string>
    <string name="datos_de_usuario">Datos de Usuario</string>
    <string name="datos_usuario">Datos Usuario</string>


</resources>