<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--never significa que nunca va a aparecer en la accion bar
    ifRoom , es que va a aparecer solo si hay espacio-->
    <item
        android:id="@+id/menu_profile"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/settingsss"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/menu_informacion"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/menunuevo"
        app:showAsAction="ifRoom|withText" />


    <item
        android:id="@+id/menu_modify_Plan"
        android:title="@string/modifyPlan"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_exit"
        android:title="@string/closeSession"
        app:showAsAction="never" />

</menu>