<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@android:color/white">

    <!-- Foto de perfil -->
    <ImageView
        android:id="@+id/icon_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:src="@drawable/icono_perfil"
        android:layout_marginBottom="16dp" />

    <!-- Nombre de usuario -->
    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_user"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp" />

    <!-- Correo electrónico -->
    <TextView
        android:id="@+id/profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_user"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp" />

    <!-- Número de teléfono -->
    <TextView
        android:id="@+id/profile_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel_user"
        android:textSize="16sp"
        android:textColor="@android:color/darker_gray"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp" />

    <!-- Botón para cambiar datos -->
    <Button
        android:id="@+id/change_data_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_data"
        android:textSize="16sp"
        android:backgroundTint="@android:color/holo_green_light"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp" />


    <!-- Botón para cambiar contraseña -->
    <Button
        android:id="@+id/change_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="16sp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:textColor="@android:color/white"
        android:layout_marginBottom="16dp" />

    <!-- Botón para cerrar sesión  -->
    <Button
        android:id="@+id/logout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textSize="16sp"
        android:backgroundTint="@android:color/holo_red_light"
        android:textColor="@android:color/white" />

</LinearLayout>
