<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gym">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        android:padding="10dp"
        android:text="@string/bien"
        android:textColor="#F2EEF2"
        android:textSize="70sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <TextView android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuarioo"
            android:textColor="#F2EEF2"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/TxtUsuario"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/usuarioText"
            android:autofillHints=""
            android:inputType="text"
            android:textColor="#000000"
            android:background="#FFFFFF"/>

        <TextView android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contrasenia"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText android:id="@+id/TxtPassword"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/contraseniaText"
            android:autofillHints=""
            android:inputType="textPassword"
            android:textColor="#000000"
            android:background="#FFFFFF"
            android:layout_marginBottom="20sp" />

        <LinearLayout android:orientation="horizontal"

            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/BtnAceptar"
                android:text="@string/login"
                android:paddingLeft="20dip"
                android:paddingRight="20dip" />

            <!--Genera un espacio entre los elementos -->
            <Space
                android:layout_width="20dp"
                android:layout_height="16dp" />

            <!--Falta implementar la logica de este boton-->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/BtnRegistar"
                android:text="@string/register"
                android:paddingLeft="20dip"
                android:paddingRight="20dip"
                android:textColor="#E7E4E4"
                android:background="@android:color/transparent"
                />

        </LinearLayout>




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>




