<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Se coloco todo el contraintslaout dentro del drawerlayout , no se le modifico nada   -->

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="#000000">

        <!--Esto es el titulo-->


        <ScrollView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="parent">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/TextViewMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bien"
                    android:textColor="#F2EEF2"
                    android:textSize="40sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <!--genero-->
                <LinearLayout android:orientation="vertical"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_background">

                    <TextView android:id="@+id/TextView03"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genre"
                        android:textColor="#000000"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <RadioGroup android:id="@+id/gruporb"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <RadioButton android:id="@+id/radio1"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/man"
                            android:textColor="@color/black"/>
                        <RadioButton android:id="@+id/radio2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/woman"
                            android:textColor="@color/black"/>
                        <RadioButton android:id="@+id/radio3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Other"
                            android:textColor="@color/black"/>
                    </RadioGroup>


                </LinearLayout>



                <!--dias de entrenamiento -->
                <LinearLayout android:orientation="vertical"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_background">


                    <TextView android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/training"
                        android:textColor="#000000"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <LinearLayout android:orientation="vertical"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <CheckBox android:id="@+id/ChkMarcame1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:buttonTint="#000000"
                            android:text="@string/monday"
                            android:checked="false" />

                        <CheckBox android:id="@+id/ChkMarcame2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:buttonTint="#000000"
                            android:text="@string/thursday"
                            android:checked="false" />

                        <CheckBox android:id="@+id/ChkMarcame3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:buttonTint="#000000"
                            android:text="@string/wend"
                            android:checked="false" />

                        <CheckBox android:id="@+id/ChkMarcame4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:buttonTint="#000000"
                            android:text="@string/tusd"
                            android:checked="false" />
                        <CheckBox android:id="@+id/ChkMarcame5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:buttonTint="#000000"
                            android:text="@string/friday"
                            android:checked="false" />
                        <CheckBox android:id="@+id/ChkMarcame6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:buttonTint="#000000"
                            android:text="@string/saturday"
                            android:checked="false" />
                        <CheckBox android:id="@+id/ChkMarcame7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:buttonTint="#000000"
                            android:text="@string/allbefore"
                            android:checked="false" />


                    </LinearLayout>

                </LinearLayout>


                <!--Este es el de la meta -->
                <LinearLayout android:orientation="vertical"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_background"
                    android:textColor="#000000">

                    <TextView android:id="@+id/TextView02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/goal"
                        android:textColor="#000000"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <Spinner android:id="@+id/CmbOpciones"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:popupBackground="#FFFFFF"
                        />

                </LinearLayout>

                <!--Comentario personal-->
                <LinearLayout android:orientation="vertical"

                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:background="@drawable/rounded_background">

                    <TextView android:id="@+id/TextView04"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/comment1"
                        android:textColor="#000000"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/TxtUsuario"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:hint="@string/comment1"
                        android:autofillHints=""
                        android:inputType="text"
                        android:textColor="#000000"
                        android:background="#FFFFFF"/>


                </LinearLayout>

                <!--Al activar el thema en el manifest para la action bar , se desabilita las caracteristicas
                predefinidas para las cosas como los botones , porque eso tuve que darle diseño -->
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/BtnEnviar"
                    android:text="@string/send"
                    android:textColor="#E7E4E4"
                    android:paddingLeft="20dip"
                    android:paddingRight="20dip"
                    android:background="#97B386F2"/>




            </LinearLayout>

        </ScrollView>




    </androidx.constraintlayout.widget.ConstraintLayout>







    <!-- Menú deslizante -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu2"/>

</androidx.drawerlayout.widget.DrawerLayout>



